potions-port-rule.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: potions-port-rule
  namespace: potions
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
      - namespaceSelector:
          matchLabels:
            name: darkarts
           
      ports:
        - protocol: TCP
          port: 80
